# Talentengine

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/: requirements.txt
backend/app/: main.py
backend/data/: geography_names.json  place_county_crosswalk.json  scenarios.json
data_pipeline/: README.md
data_pipeline/ingestion/: base.py  build_all_dataset.py  build_dataset_common.py  build_phase2_dataset.py  build_phase3_dataset.py  run_demo.py
data_pipeline/orchestration/: flows.py
data_pipeline/qa/: __init__.py  check_duplicate_metric_keys.py  check_freshness.py  check_geography_coverage.py  check_metric_ranges.py  check_source_catalog.py  check_staleness_flags.py  release_acceptance.py
data_pipeline/scoring/: __init__.py  build_score_fact.py
data_pipeline/source_snapshots/: local_source_records.json
data_pipeline/transforms/: __init__.py  geography_aggregation.py  standardize_metrics.py
deploy/: docker-compose.prod.legacy.yml
deploy/digitalocean/: Caddyfile.example  README.md  env.defaults  env.example
docs/: COMPONENT_PIPELINE_CHECKLIST.md  FILE_BY_FILE_CHECKLIST.md  README.md
docs/runbooks/: data-refresh.md  score-validation.md
docs/technical/: architecture.md  data-source-catalog.md  (+3 more)
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
scripts/: hash_figwork_password.py
tests/: test_api_endpoints.py  test_data_pipeline_qa.py  test_models_validation.py  test_vendor_adapters.py  test_worktrigger_api.py
(+88 files in other folders)
